FIX: Firebase App Hosting build - Next.js 15 RSC compliance
Fixed two critical build failures:

1. next.config.js - Next.js 15 compatibility:
   - Removed deprecated experimental.serverComponentsExternalPackages
   - Replaced with serverExternalPackages: ['firebase-admin']
   - Preserved all image remote patterns and config

2. Hero RSC boundary violations:
   - Deleted hero-optimized.tsx (had styled-jsx in Server Component)
   - Created HeroCarouselWrapper.tsx (proper 'use client' wrapper)
   - Updated page.tsx to use server/client separation correctly
   - Server component renders first slide immediately (LCP)
   - Client wrapper hydrates carousel after mount (no SSR mismatch)

Build verified locally: ✓ Compiled successfully
All routes generated without errors
No RSC boundary violations

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ firebase-emulators.log
 firebase.emulators.log
 *.jar
 *.lock
-report*
+report*Hip I have completed my passion why are
 
 # =========================
 # Environment / Secrets (CRITICAL)
