--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "firebase-admin": "^11.11.1",
     "firebase-functions": "^3.24.1",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.22",
